<resources>
    <string name="app_name">Stock Hawk</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint">FB</string>
    <string name="input_prefill" />
    <string name="widget_title">Today\'s Market</string>
    <string name="appwidget_text" translatable="false">@string/app_name</string>
    <string name="network_toast">Unable to connect to network</string>
    <string name="stock_already_saved_toast">Stock already exists</string>
    <string name="fetch_failure">Failed to retrieve stock data</string>
    <string name="last_updated">Last Updated: %s</string>

    <string name="no_data_to_display">No data to display</string>
    <string name="symbol_detail">Symbol Detail</string>
    <string name="desc_add_symbol_fab">Add symbol</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="content_description_chart_view">Line chart for stock symbol</string>
    <string name="time_period_1m">1m</string>
    <string name="time_period_1d">1d</string>
    <string name="time_period_5d">5d</string>
    <string name="time_period_1y">1y</string>
    <string name="time_period_max">max</string>
</resources>
