<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/last_updated"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|top"
        tools:text="@string/last_updated"
        android:textStyle="italic"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/stock_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_item_quote"/>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_data_to_display"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:contentDescription="@string/desc_add_symbol_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_white_24dp"
        fab:fab_colorNormal="@color/material_blue_500"
        fab:fab_colorPressed="@color/material_blue_700"
        fab:fab_colorRipple="@color/ripple"
        fab:fab_shadow="true"
        fab:fab_type="normal" />
</RelativeLayout>
